<resources>
    <string name="app_name">VCADS</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="log_in">Log In</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="transmit_alert">Transmit Alert</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="license_plate">License Plate</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="key">Key</string>
    <string name="confirm_key">Confirm Key</string>
    <string name="log_out">Log Out</string>
    <string name="activate">Activate</string>
    <string name="add_new_alert">Add New Alert</string>
    <string name="alert">Alert</string>
    <string name="vehicle">Vehicle</string>
    <string name="deactivate">Deactivate</string>
    <string name="confirm_delete">Confirm delete vehicle</string>
    <string name="collision_warning">Collision Warning</string>
    <string name="activate_vehicle">ACTIVATE</string>
</resources>
