<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:gravity="center_vertical">





    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_vehicle_license_plate_edit_text"
        android:hint="@string/license_plate"
        />
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/add_vehicle_model_auto_complete"
        android:inputType="textEmailAddress"
        android:hint="@string/vehicle_model"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:id="@+id/add_vehicle_vehicle_key_edit_text"
        android:hint="@string/key"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:id="@+id/add_vehicle_confirm_vehicle_key_edit_text"
        android:hint="@string/confirm_key"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_vehicle"
        android:id="@+id/add_vehicle_add_button"
        />
</LinearLayout>